<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkNavy"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/layout_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:src="@drawable/profile" />

        <ImageView
            android:id="@+id/settingsBtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="355dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/outline_settings_24"
            android:contentDescription="@string/edit"
            android:clickable="true"
            android:focusable="true"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/nameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_image">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/eng_flag"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/france_flag"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <TextView
        android:id="@+id/usernameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameView"/>

    <TextView
        android:id="@+id/joinedView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/joinedDate"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameView"/>

    <LinearLayout
        android:id="@+id/followerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinedView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/following"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/followerView">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/inviteBtn"
            android:layout_width="310dp"
            android:layout_height="65dp"
            android:paddingHorizontal="25dp"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/add_friend"
            android:textColor="@color/blue"
            android:textSize="18sp"
            app:icon="@drawable/person_add"
            app:iconTint="@color/blue"
            app:iconGravity="textStart"
            app:iconSize="20dp"
            app:cornerRadius="18dp"
            app:strokeWidth="4dp"
            app:strokeColor="@color/gray" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/uploadBtn"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/upload_button"
            app:cornerRadius="18dp"
            app:icon="@drawable/upload"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="25dp"
            app:iconTint="@color/blue"
            app:strokeColor="@color/gray"
            app:strokeWidth="4dp" />
    </LinearLayout>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="2.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonView" />

    <TextView
        android:id="@+id/ringkasanView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ringkasanTitle"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1" />

    <LinearLayout
        android:id="@+id/cardGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ringkasanView">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="183dp"
            android:layout_height="70dp"
            android:layout_marginEnd="6dp"
            android:backgroundTint="@android:color/transparent"
            app:cardCornerRadius="16dp"
            app:strokeColor="@color/gray"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/fire"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/streakPoint"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/streak"
                        android:textColor="@color/lightgray"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="183dp"
            android:layout_height="70dp"
            android:layout_marginStart="6dp"
            android:backgroundTint="@android:color/transparent"
            app:cardCornerRadius="16dp"
            app:strokeColor="@color/gray"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/xp"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/xpPoint"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/xp"
                        android:textColor="@color/lightgray"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardGroup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardGroup1">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="183dp"
            android:layout_height="70dp"
            android:layout_marginEnd="6dp"
            android:backgroundTint="@android:color/transparent"
            app:cardCornerRadius="16dp"
            app:strokeColor="@color/gray"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/skor"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/leagueTitle"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/league"
                        android:textColor="@color/lightgray"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="183dp"
            android:layout_height="70dp"
            android:layout_marginStart="6dp"
            android:backgroundTint="@android:color/transparent"
            app:cardCornerRadius="16dp"
            app:strokeColor="@color/gray"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/eng_flag"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/scorePoint"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/score"
                        android:textColor="@color/lightgray"
                        android:textSize="13sp"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pencapaianView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardGroup2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pencapaianTitle"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="145dp"
            android:text="@string/lihat_semua"
            android:textColor="@color/blue"
            android:textSize="18sp"/>
    </LinearLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="2.5dp"
        android:layout_marginTop="5dp"
        android:background="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pencapaianView"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/home"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/sound"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/train"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/skor"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/baseline_account_circle_24"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/another"
            tools:ignore="ContentDescription" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>